# fast-rcnn-torch

./: BBoxRegressionCriterion.lua  BatchROISampler.lua  CMakeLists.txt  ImageDetector.lua  Options.lua  README.md  ROIPooling.lua  ROIProcessor.lua  Tester.lua  Transform.lua  WeightedSmoothL1Criterion.lua  configs.lua  data.lua  fastrcnn-scm-1.rockspec  init.lua  model.lua  options.lua  projectdir.lua  rois.lua  test.lua  test_new.lua  train.lua  transform.lua  transform_box.lua  transform_image.lua  visualize.lua
code/: Detector.lua  NoBackprop.lua  configs.lua  data.lua  model.lua  options.lua  rois.lua  test.lua  train.lua  transform.lua  transform_box.lua
code/util/: nms.lua  store.lua  utils.lua
eval/: coco.lua  coco_eval.lua  init.lua  pascal_eval.lua
lib/: CMakeLists.txt
modules/: BBoxNorm.lua  BBoxRegressionCriterion.lua  NoBackprop.lua  init.lua
rocks/: fastrcnn-scm-1.rockspec
util/: bbox_transform.lua  boxoverlap.lua  loadmatlab.lua  model_utils.lua  nms.c  nms.lua  nmsv2.lua  store.lua  utils.lua  visualize.lua  voc_eval.lua
utils/: box.lua  boxoverlap.lua  init.lua  load.lua  loadmatlab.lua  logical2ind.lua  model.lua  model_utils.lua  nms.lua  store.lua  table.lua  visualize.lua
