CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)
FIND_PACKAGE(Torch REQUIRED)

set(PKGNAME fastrcnn)

INSTALL(DIRECTORY "code" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/${PKGNAME}/${dir}")
install(FILES "init.lua" DESTINATION ${Torch_INSTALL_LUA_PATH_SUBDIR}/${PKGNAME}/${dir})


